--- a/Main/GeometryTutorLib/GeometryTutorLib.csproj
+++ b/Main/GeometryTutorLib/GeometryTutorLib.csproj
@@ -516,6 +516,17 @@
     <Compile Include="HardCoded\Problems\ShadedAreaProblems\Online\Magoosh\MgProb6.cs" />
     <Compile Include="HardCoded\Problems\ShadedAreaProblems\Online\Magoosh\MgProb7.cs" />
     <Compile Include="HardCoded\Problems\ShadedAreaProblems\Online\Magoosh\MgProb8.cs" />
+    <Compile Include="HardCoded\Problems\ShadedAreaProblems\Online\TutorVista\TvPage2Prob14.cs" />
+    <Compile Include="HardCoded\Problems\ShadedAreaProblems\Online\TutorVista\TvPage4Prob33cs.cs" />
+    <Compile Include="HardCoded\Problems\ShadedAreaProblems\Online\TutorVista\TvPage1Prob7.cs" />
+    <Compile Include="HardCoded\Problems\ShadedAreaProblems\Online\TutorVista\TvPage1Prob8.cs" />
+    <Compile Include="HardCoded\Problems\ShadedAreaProblems\Online\TutorVista\TvPage1Prob6.cs" />
+    <Compile Include="HardCoded\Problems\ShadedAreaProblems\Online\TutorVista\TvPage2Prob11.cs" />
+    <Compile Include="HardCoded\Problems\ShadedAreaProblems\Online\TutorVista\TvPage4Prob35.cs" />
+    <Compile Include="HardCoded\Problems\ShadedAreaProblems\Online\TutorVista\TvPage4Prob34.cs" />
+    <Compile Include="HardCoded\Problems\ShadedAreaProblems\Online\TutorVista\TvPage4Prob38.cs" />
+    <Compile Include="HardCoded\Problems\ShadedAreaProblems\Online\TutorVista\TvPage4Prob39.cs" />
+    <Compile Include="HardCoded\Problems\ShadedAreaProblems\Online\TutorVista\TvPage4Prob40.cs" />
     <Compile Include="HardCoded\Problems\ShadedAreaProblems\Online\WpfkProb2.cs" />
     <Compile Include="HardCoded\Problems\ShadedAreaProblems\Online\WpfkProb46.cs" />
     <Compile Include="HardCoded\Problems\ShadedAreaProblems\Online\WpfkProb6.cs" />
