--- a/Main/GeometryTutorLib/GeometryTutorLib.csproj
+++ b/Main/GeometryTutorLib/GeometryTutorLib.csproj
@@ -39,7 +39,7 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>Bin\Release</OutputPath>
-    <DefineConstants>TRACE;SILVERLIGHT</DefineConstants>
+    <DefineConstants>TRACE;SILVERLIGHT;FIGURE_SYNTHESIZER</DefineConstants>
     <NoStdLib>true</NoStdLib>
     <NoConfig>true</NoConfig>
     <ErrorReport>prompt</ErrorReport>
@@ -539,6 +539,7 @@
     <Compile Include="HardCoded\Problems\ShadedAreaProblems\Singapore\Page208.cs" />
     <Compile Include="HardCoded\Problems\ShadedAreaProblems\Singapore\Page209.cs" />
     <Compile Include="HardCoded\Problems\ShadedAreaProblems\Singapore\Page210.cs" />
+    <Compile Include="HardCoded\Problems\ShadedAreaProblems\Synthesis Testing\RightRight.cs" />
     <Compile Include="HintGenerator\HintGenerator.cs" />
     <Compile Include="Instantiator\Axioms\ArcAdditionAxiom.cs" />
     <Compile Include="Instantiator\Definitions\Circles\CongruentCircleDefinition.cs" />
