IJCAI DataGen Update

--- a/Main/TestApp/TestApp.csproj
+++ b/Main/TestApp/TestApp.csproj
@@ -18,7 +18,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;FIGURE_SYNTHESIZER</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;HARD_CODED</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
